[package]
name = "rust-bitcoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecdsa = "0.12.4"
rand = "0.8.4"
data-encoding = "2.3.2"
ring = "0.16.20"
hex = "0.3.1"
num-bigint = "0.4"
bs58 = "0.4.0"
to-binary = "0.4.0"
